Fixes #1162 - Transparent background on empty Map Drawer on smaller screens

--- a/src/routes/MapExplorer/MapDrawer/MapDrawer.scss
+++ b/src/routes/MapExplorer/MapDrawer/MapDrawer.scss
@@ -7,6 +7,7 @@
   z-index: 20;
   overflow-x: hidden;
   box-shadow: $box-shadow-default;
+  background: white;
 
   &.noUser {
     height: 100%;
